welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:23: error: ':' expected but ')' found.
def faireV(Color){
                ^MethodsPicture:74: error: identifier expected but '}' found.
}
^